--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     implementation "com.android.support:design:27.1.1"
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.squareup:otto:1.3.8'
+
 
 }
