--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'io.realm:android-adapters:1.4.0'
+
 
 
 }
